--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .venv
-/Notebooks previas al Proyecto/
-/12-05-2022/
-/La Republica Scraper/
+Notebooks previas al Proyecto/
+12-05-2022/
+La Republica Scraper/
