--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 .venv
-Notebooks previas al Proyecto1/
-12-05-2022/
-La Republica Scraper/
+Notebooks previas al Proyecto1/ 
+La Republica Scraper1/
